@@ -28,6 +28,7 @@ Tasks:
 - #7327 Only use Ninja to build on Windows
 - #7328 Reset error state before calling Process32Next
 - #1177 Split CMake presets into debug and release
+- #7331 Script to install deps (Windows only for now)
 
 # 1.14.6
 
